home page white css commit

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -68,6 +68,7 @@
             <polygon id="bzz03" class="home-3 bzz03 hideshowhome delayhome" points="510.19 88.3 710 242 788 380 709 520 510.19 674.23 678.98 380 510.19 88.3"/>
             <polygon id="bzz02" class="home-4 bzz02 hideshowhome delayhome" points="408.09 88.3 663 242 743 380 659 520 408.09 674.23 576.88 380 408.09 88.3"/>
             <polygon id="bzz01" class="home-5 bzz01 hideshowhome" points="285.31 88.3 606 242 685 380 605 520 285.31 674.23 454.09 380 285.31 88.3"/>
+            <text x="890" y="385" fill="lightgray">scroll right</text>
           </g>
 <!--           <g id="Layer_2" data-name="Layer 2">
             <polyline id="bzz01-2" data-name="bzz01" class="home-6 bzz01 hideshowhome delayhome" points="285.31 88.3 454.09 380 285.31 674.23"/>
@@ -394,24 +395,24 @@
   </g>
   <g id="credits_box" data-attach="#c1" class="attached">
       <polygon id="c1" class="cls-2" points="3647.5 378.97 3498.56 636.95 3200.22 636.57 3050.84 378.78 3200.22 121 3498.56 121 3647.5 378.97"/>
-      <text x="3000" y="180" data-x-rel="-420" class="creds" id="credabme">ABOUT ME:</text>
-      <text x="3000" y="210" data-x-rel="-420" class="creds">i'm aarti c sharma, a designer/engineer.</text>
-      <text x="3000" y="230" data-x-rel="-420" class="creds">i have over 5 years of design experience as an</text>
-      <text x="3000" y="250" data-x-rel="-420" class="creds">architect, &amp; 3 years as a technical software engineer.</text>
-      <text x="3000" y="270" data-x-rel="-420" class="creds">now i design UX for VR, and aspire to create new futures.</text>
-      <text x="3000" y="290" data-x-rel="-420" class="creds">i like 3D, maps, models, data viz, open source technologies -- </text>
-      <text x="3000" y="310" data-x-rel="-420" class="creds">and most of all - collaborating enthusiastically with everyone involved.</text>
+      <text x="3000" y="140" data-x-rel="-420" class="creds" id="credabme">about me:</text>
+      <text x="3000" y="180" data-x-rel="-420" class="creds">i'm aarti c sharma, a designer/engineer.</text>
+      <text x="3000" y="220" data-x-rel="-420" class="creds">i have over 5 years of design experience as an</text>
+      <text x="3000" y="240" data-x-rel="-420" class="creds">architect, &amp; 3 years as a technical software engineer.</text>
+      <text x="3000" y="260" data-x-rel="-420" class="creds">now i design UX for VR, and aspire to create new futures.</text>
+      <text x="3000" y="280" data-x-rel="-420" class="creds">i like 3D, maps, models, data viz, open source technologies -- </text>
+      <text x="3000" y="300" data-x-rel="-420" class="creds">and most of all - collaborating enthusiastically with everyone involved.</text>
       <text x="3000" y="340" data-x-rel="-420" class="creds" id="credcontact">contact me: <a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
-      <text x="3000" y="370" data-x-rel="-420" class="creds">---------------------------------------------------</a></text>
-      <text x="3000" y="400" data-x-rel="-420" class="creds" id="credabweb">ABOUT THIS WEBSITE:</text>
-      <text x="3000" y="430" data-x-rel="-420" class="creds">i designed and developed this 3D website with:</text>  
-      <text x="3000" y="450" data-x-rel="-420" class="creds">SKETCHUP : made a 3D model to take screenshots</text>
-      <text x="3000" y="470" data-x-rel="-420" class="creds">PHOTOSHOP + ILLUSTRATOR : made vector svgs from screenshots</text>
-      <text x="3000" y="490" data-x-rel="-420" class="creds">JAVASCRIPT + CSS + HTML : browser animation by scroll position</text>
-      <text x="3000" y="520" data-x-rel="-420" class="creds" id="credlinks"><a href="projects/aartics_story">read the story &nbsp;</a> || <a href="https://github.com/aartics/aartics_portfolio" target="_blank">&nbsp;get the files on github</a></text>
-      <text x="3000" y="550" data-x-rel="-420" class="creds" id="credits9">special shout-out to <a href="https://github.com/owings1" target="_blank">@owings1</a></text>
-      <text x="3000" y="570" data-x-rel="-420" class="creds">---------------------------------------------------</a></text>
-      <text x="3000" y="600" data-x-rel="-420" class="creds">&copy; copyright aartics 2017</a></text>
+      <text x="3000" y="380" data-x-rel="-420" class="creds">---------------------------------------------------</a></text>
+      <text x="3000" y="420" data-x-rel="-420" class="creds" id="credabweb">about this website:</text>
+      <text x="3000" y="460" data-x-rel="-420" class="creds">i designed and developed this 3D website with:</text>  
+      <text x="3000" y="480" data-x-rel="-420" class="creds">SKETCHUP : made a 3D model to take screenshots</text>
+      <text x="3000" y="500" data-x-rel="-420" class="creds">PHOTOSHOP + ILLUSTRATOR : made vector svgs from screenshots</text>
+      <text x="3000" y="520" data-x-rel="-420" class="creds">JAVASCRIPT + CSS + HTML : browser animation by scroll position</text>
+      <text x="3000" y="550" data-x-rel="-420" class="creds" id="credlinks"><a href="projects/aartics_story">read the story &nbsp;</a> || <a href="https://github.com/aartics/aartics_portfolio" target="_blank">&nbsp;get the files on github</a></text>
+      <text x="3000" y="580" data-x-rel="-420" class="creds" id="credits9">special shout-out to <a href="https://github.com/owings1" target="_blank">@owings1</a></text>
+      <text x="3000" y="610" data-x-rel="-420" class="creds">---------------------------------------------------</a></text>
+      <text x="3000" y="635" data-x-rel="-420" class="creds">&copy; copyright aartics 2017</a></text>
   </g>                 
         </svg>
 <!--       </div>
