project css improved. commit is before google analytics added

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -13,11 +13,11 @@
 </head>
 <body>
     <header>
-    <div class="aarticslogo">
-        <a class="aarticslogobtn" href="https://www.aartics.com"><img src="img/aarticslogo.png"/></a>
-    </div>
+      <div class="aarticslogo">
+          <a class="aarticslogobtn" href="https://www.aartics.com"><img src="img/aarticslogo.png"/></a>
+      </div>
       <ul id="ul_top_hypers">
-        <li class="a_top_hypers dropdown">
+        <li class="a_top_hypers dropdown" id="area2dd">
             <button class="dropbtn" id="area2">UX Designer</button>
             <div class="dropdown-content">
               <a href="https://www.aartics.com/projects/resonateai">UX project: Resonate.ai</a>
@@ -27,7 +27,7 @@
               <a href="https://www.aartics.com/projects/karunavr">UX project: Karuna VR</a>
             </div>
         </li>
-        <li class="a_top_hypers dropdown">
+        <li class="a_top_hypers dropdown" id="area3dd">
             <button class="dropbtn" id="area3">Architect</button>
             <div class="dropdown-content">
               <a href="https://www.aartics.com/projects/aartics_architecture.pdf">Architecture Portfolio PDF</a>
@@ -38,7 +38,7 @@
               <a href="https://www.aartics.com/projects/barcelona">Urban Planning: Barcelona Idea</a>
             </div>
         </li>
-        <li class="a_top_hypers dropdown">
+        <li class="a_top_hypers dropdown" id="area4dd">
             <button class="dropbtn" id="area4">Maker</button>
             <div class="dropdown-content">
               <a href="https://www.aartics.com/projects/bendy">Product: Shelter-Cart, New York</a>
@@ -48,7 +48,7 @@
               <a href="https://www.aartics.com/projects/graphics">Graphics: Miscellaneous</a>
             </div>
         </li>
-        <li class="a_top_hypers dropdown">
+        <li class="a_top_hypers dropdown" id="area5dd">
             <button class="dropbtn" id="area5">Engineer</button>
             <div class="dropdown-content">
               <a href="https://github.com/aartics">My GitHub page</a>
@@ -56,8 +56,13 @@
               <a href="aartics_resume.pdf">My Resume</a>
             </div>
         </li>
-        <li class="a_top_hypers"><button class="dropbtn" id="area6">About</button></li>
-    </ul>
+        <li class="a_top_hypers dropdown" id="area6dd">
+          <button class="dropbtn" id="area6">About</button>
+          <div class="dropdown-content">
+            <a href="https://www.aartics.com">I'm Aarti, <br> an engineer <br>and designer <br>seeking new <br>opportunities</a>
+          </div>
+        </li>
+      </ul>
     </header>
     <div class="child3" id="about">
         <svg xmlns="http://www.w3.org/2000/svg" width="1000" height="760" viewBox="0 0 1000 760" id="test1">
