--- a/aartics/projects/resonateai/index.htm
+++ b/aartics/projects/resonateai/index.htm
@@ -13,7 +13,6 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../assets_v4/css/aartics_projects_v4.css"/>
-    <link rel="stylesheet" href="css/resonate_v4.css"/>
     <link rel="icon" 
       type="image/png" 
       href="../../favico.png">
@@ -25,47 +24,52 @@
     	<a class="aarticslogobtn" href="https://www.aartics.com"><img src="../../img/aarticslogo.png"/></a>
     </div>
       <ul id="ul_top_hypers">
-        <li class="a_top_hypers dropdown">
-            <button class="dropbtn" id="area2">UX Designer</button>
-            <div class="dropdown-content">
-              <a href="https://www.aartics.com/projects/resonateai">UX project: Resonate.ai</a>
-              <a href="https://www.aartics.com/projects/aartics_story">Web Dev: 3D aartics.com</a>
-              <a href="https://www.aartics.com/projects/sfac">UX project: SF Arts Commission</a>
-              <a href="https://www.aartics.com/projects/wolflion">UX project: Wolf and Lion</a>
-              <a href="https://www.aartics.com/projects/karunavr">UX project: Karuna VR</a>
-            </div>
-        </li>
-        <li class="a_top_hypers dropdown">
-            <button class="dropbtn" id="area3">Architect</button>
-            <div class="dropdown-content">
-              <a href="https://www.aartics.com/projects/aartics_architecture.pdf">Architecture Portfolio PDF</a>
-              <a href="https://www.aartics.com/projects/aartics_urbanism.pdf">Urbanism Portfolio PDF</a>
-              <a href="https://www.aartics.com/projects/coimbatore">Architecture: Mall in Coimbatore</a>
-              <a href="https://www.aartics.com/projects/assen">Urban Design: City Boulevard, Assen</a>
-              <a href="https://www.aartics.com/projects/mumbai">Urban Design: Recentering Mumbai</a>
-              <a href="https://www.aartics.com/projects/barcelona">Urban Planning: Barcelona Idea</a>
-            </div>
-        </li>
-        <li class="a_top_hypers dropdown">
-            <button class="dropbtn" id="area4">Maker</button>
-            <div class="dropdown-content">
-              <a href="https://www.aartics.com/projects/bendy">Product: Shelter-Cart, New York</a>
-              <a href="https://github.com/aartics/chess_models">Product: Chess of Thrones</a>
-              <a href="https://www.aartics.com/projects/octet">Product: Octet Truss Block</a>
-              <a href="https://www.aartics.com/projects/allsportsbar">Interiors: All Sports Bar</a>
-              <a href="https://www.aartics.com/projects/graphics">Graphics: Miscellaneous</a>
-            </div>
-        </li>
-        <li class="a_top_hypers dropdown">
-            <button class="dropbtn" id="area5">Engineer</button>
-            <div class="dropdown-content">
-              <a href="https://github.com/aartics">My GitHub page</a>
-              <a href="https://www.linkedin.com/in/aartics">My LinkedIn Profile</a>
-              <a href="aartics_resume.pdf">My Resume</a>
-            </div>
-        </li>
-        <li class="a_top_hypers"><button class="dropbtn" id="area6">About</button></li>
-    </ul>
+		<li class="a_top_hypers dropdown" id="area2dd">
+		    <button class="dropbtn" id="area2">UX Designer</button>
+		    <div class="dropdown-content">
+		      <a href="https://www.aartics.com/projects/resonateai">UX project: Resonate.ai</a>
+		      <a href="https://www.aartics.com/projects/aartics_story">Web Dev: 3D aartics.com</a>
+		      <a href="https://www.aartics.com/projects/sfac">UX project: SF Arts Commission</a>
+		      <a href="https://www.aartics.com/projects/wolflion">UX project: Wolf and Lion</a>
+		      <a href="https://www.aartics.com/projects/karunavr">UX project: Karuna VR</a>
+		    </div>
+		</li>
+		<li class="a_top_hypers dropdown" id="area3dd">
+		    <button class="dropbtn" id="area3">Architect</button>
+		    <div class="dropdown-content">
+		      <a href="https://www.aartics.com/projects/aartics_architecture.pdf">Architecture Portfolio PDF</a>
+		      <a href="https://www.aartics.com/projects/aartics_urbanism.pdf">Urbanism Portfolio PDF</a>
+		      <a href="https://www.aartics.com/projects/coimbatore">Architecture: Mall in Coimbatore</a>
+		      <a href="https://www.aartics.com/projects/assen">Urban Design: City Boulevard, Assen</a>
+		      <a href="https://www.aartics.com/projects/mumbai">Urban Design: Recentering Mumbai</a>
+		      <a href="https://www.aartics.com/projects/barcelona">Urban Planning: Barcelona Idea</a>
+		    </div>
+		</li>
+		<li class="a_top_hypers dropdown" id="area4dd">
+		    <button class="dropbtn" id="area4">Maker</button>
+		    <div class="dropdown-content">
+		      <a href="https://www.aartics.com/projects/bendy">Product: Shelter-Cart, New York</a>
+		      <a href="https://github.com/aartics/chess_models">Product: Chess of Thrones</a>
+		      <a href="https://www.aartics.com/projects/octet">Product: Octet Truss Block</a>
+		      <a href="https://www.aartics.com/projects/allsportsbar">Interiors: All Sports Bar</a>
+		      <a href="https://www.aartics.com/projects/graphics">Graphics: Miscellaneous</a>
+		    </div>
+		</li>
+		<li class="a_top_hypers dropdown" id="area5dd">
+		    <button class="dropbtn" id="area5">Engineer</button>
+		    <div class="dropdown-content">
+		      <a href="https://github.com/aartics">My GitHub page</a>
+		      <a href="https://www.linkedin.com/in/aartics">My LinkedIn Profile</a>
+		      <a href="aartics_resume.pdf">My Resume</a>
+		    </div>
+		</li>
+		<li class="a_top_hypers dropdown" id="area6dd">
+			<button class="dropbtn" id="area6">About</button>
+			<div class="dropdown-content">
+			  <a href="https://www.aartics.com">I'm Aarti, <br> an engineer <br>and designer <br>seeking new <br>opportunities</a>
+			</div>
+		</li>
+	  </ul>
     </header>
 	<div class="container-fluid">
 	  <div class="row">
@@ -412,7 +416,7 @@
 				<h3 id="abouth3">about me:</h3>
 				<p>I'm Aarti. I'm a designer + developer and I'm bringing together my past experience in architecture and software engineering to build new futures. Get in touch:</p>
 				<div class="row logocwrapper">
-					<a href="https://www.aartics.com" class="logoc"><img src="../aartics_icon.png"></a>
+					<a href="https://www.aartics.com" class="logoc"><img src="../../aartics_icon_v4_white.png"></a>
 					<a href="aartics_resume.pdf" class="logoc"><img src="../../img/resume_white.png"/></a>
 					<a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="../../img/linkedin_white.png"/></a>
 					<a href="mailto:aartics@gmail.com" class="logoc"><img src="../../img/mail_white.png"/></a>
