--- a/aartics/projects/aartics_story/index.htm
+++ b/aartics/projects/aartics_story/index.htm
@@ -20,51 +20,56 @@
 </head>
 <body>
    <header>
-    <div class="aarticslogo">
-    	<a class="aarticslogobtn" href="https://www.aartics.com"><img src="../../img/aarticslogo.png"/></a>
-    </div>
-      <ul id="ul_top_hypers">
-        <li class="a_top_hypers dropdown">
-            <button class="dropbtn" id="area2">UX Designer</button>
-            <div class="dropdown-content">
-              <a href="https://www.aartics.com/projects/resonateai">UX project: Resonate.ai</a>
-              <a href="https://www.aartics.com/projects/aartics_story">Web Dev: 3D aartics.com</a>
-              <a href="https://www.aartics.com/projects/sfac">UX project: SF Arts Commission</a>
-              <a href="https://www.aartics.com/projects/wolflion">UX project: Wolf and Lion</a>
-              <a href="https://www.aartics.com/projects/karunavr">UX project: Karuna VR</a>
-            </div>
-        </li>
-        <li class="a_top_hypers dropdown">
-            <button class="dropbtn" id="area3">Architect</button>
-            <div class="dropdown-content">
-              <a href="https://www.aartics.com/projects/aartics_architecture.pdf">Architecture Portfolio PDF</a>
-              <a href="https://www.aartics.com/projects/aartics_urbanism.pdf">Urbanism Portfolio PDF</a>
-              <a href="https://www.aartics.com/projects/coimbatore">Architecture: Mall in Coimbatore</a>
-              <a href="https://www.aartics.com/projects/assen">Urban Design: City Boulevard, Assen</a>
-              <a href="https://www.aartics.com/projects/mumbai">Urban Design: Recentering Mumbai</a>
-              <a href="https://www.aartics.com/projects/barcelona">Urban Planning: Barcelona Idea</a>
-            </div>
-        </li>
-        <li class="a_top_hypers dropdown">
-            <button class="dropbtn" id="area4">Maker</button>
-            <div class="dropdown-content">
-              <a href="https://www.aartics.com/projects/bendy">Product: Shelter-Cart, New York</a>
-              <a href="https://github.com/aartics/chess_models">Product: Chess of Thrones</a>
-              <a href="https://www.aartics.com/projects/octet">Product: Octet Truss Block</a>
-              <a href="https://www.aartics.com/projects/allsportsbar">Interiors: All Sports Bar</a>
-              <a href="https://www.aartics.com/projects/graphics">Graphics: Miscellaneous</a>
-            </div>
-        </li>
-        <li class="a_top_hypers dropdown">
-            <button class="dropbtn" id="area5">Engineer</button>
-            <div class="dropdown-content">
-              <a href="https://github.com/aartics">My GitHub page</a>
-              <a href="https://www.linkedin.com/in/aartics">My LinkedIn Profile</a>
-              <a href="aartics_resume.pdf">My Resume</a>
-            </div>
-        </li>
-        <li class="a_top_hypers"><button class="dropbtn" id="area6">About</button></li>
-    </ul>
+		<div class="aarticslogo">
+			<a class="aarticslogobtn" href="https://www.aartics.com"><img src="../../img/aarticslogo.png"/></a>
+		</div>
+		<ul id="ul_top_hypers">
+			<li class="a_top_hypers dropdown" id="area2dd">
+				<button class="dropbtn" id="area2">UX Designer</button>
+				<div class="dropdown-content">
+				  <a href="https://www.aartics.com/projects/resonateai">UX project: Resonate.ai</a>
+				  <a href="https://www.aartics.com/projects/aartics_story">Web Dev: 3D aartics.com</a>
+				  <a href="https://www.aartics.com/projects/sfac">UX project: SF Arts Commission</a>
+				  <a href="https://www.aartics.com/projects/wolflion">UX project: Wolf and Lion</a>
+				  <a href="https://www.aartics.com/projects/karunavr">UX project: Karuna VR</a>
+				</div>
+			</li>
+			<li class="a_top_hypers dropdown" id="area3dd">
+				<button class="dropbtn" id="area3">Architect</button>
+				<div class="dropdown-content">
+				  <a href="https://www.aartics.com/projects/aartics_architecture.pdf">Architecture Portfolio PDF</a>
+				  <a href="https://www.aartics.com/projects/aartics_urbanism.pdf">Urbanism Portfolio PDF</a>
+				  <a href="https://www.aartics.com/projects/coimbatore">Architecture: Mall in Coimbatore</a>
+				  <a href="https://www.aartics.com/projects/assen">Urban Design: City Boulevard, Assen</a>
+				  <a href="https://www.aartics.com/projects/mumbai">Urban Design: Recentering Mumbai</a>
+				  <a href="https://www.aartics.com/projects/barcelona">Urban Planning: Barcelona Idea</a>
+				</div>
+			</li>
+			<li class="a_top_hypers dropdown" id="area4dd">
+				<button class="dropbtn" id="area4">Maker</button>
+				<div class="dropdown-content">
+				  <a href="https://www.aartics.com/projects/bendy">Product: Shelter-Cart, New York</a>
+				  <a href="https://github.com/aartics/chess_models">Product: Chess of Thrones</a>
+				  <a href="https://www.aartics.com/projects/octet">Product: Octet Truss Block</a>
+				  <a href="https://www.aartics.com/projects/allsportsbar">Interiors: All Sports Bar</a>
+				  <a href="https://www.aartics.com/projects/graphics">Graphics: Miscellaneous</a>
+				</div>
+			</li>
+			<li class="a_top_hypers dropdown" id="area5dd">
+				<button class="dropbtn" id="area5">Engineer</button>
+				<div class="dropdown-content">
+				  <a href="https://github.com/aartics">My GitHub page</a>
+				  <a href="https://www.linkedin.com/in/aartics">My LinkedIn Profile</a>
+				  <a href="aartics_resume.pdf">My Resume</a>
+				</div>
+			</li>
+			<li class="a_top_hypers dropdown" id="area6dd">
+				<button class="dropbtn" id="area6">About</button>
+				<div class="dropdown-content">
+				  <a href="https://www.aartics.com">I'm Aarti, <br> an engineer <br>and designer <br>seeking new <br>opportunities</a>
+				</div>
+			</li>
+		</ul>
     </header>
 
 	<div class="container-fluid">
