--- a/aartics/projects/allsportsbar/index.htm
+++ b/aartics/projects/allsportsbar/index.htm
@@ -2,14 +2,23 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>aartics_sports_bar</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>aartics - all sports bar</title>
   <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <meta name="aartics portfolio" content="aartics portfolio">
-  <meta name="aarti c sharma" content="aartics_portfolio">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="../aartics_projects.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:800" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../assets_v4/css/aartics_projects_v4.css"/>
+    <link rel="icon" 
+      type="image/png" 
+      href="../../favico.png">
+  <!--  <script src="../assets_v4/js/aartics_projects_js.js"></script> -->
+  <!-- <link rel="stylesheet" href="../aartics_projects.css"> -->
   <style>
       #landing {
           height: 1350px;
@@ -23,27 +32,58 @@
 </head>
 
 <body>
-<div id="header-wrapper">
-  <div id="header-banner">
-    <div id="logoaa">
-      <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
-    </div>
-    <div id="back-button">
-      <a href="http://www.aartics.com">aartics.com</a>
-    </div>
-    <span class="dropdown">
-        <button class="dropbtn">Interiors: All Sports Bar</button>
+    <header>
+      <div class="aarticslogo">
+        <a class="aarticslogobtn" href="https://www.aartics.com"><img src="../../img/aarticslogo.png"/></a>
+      </div>
+      <ul id="ul_top_hypers">
+        <li class="a_top_hypers dropdown" id="area2dd">
+            <button class="dropbtn" id="area2">UX Designer</button>
+            <div class="dropdown-content">
+              <a href="https://www.aartics.com/projects/resonateai">UX project: Resonate.ai</a>
+              <a href="https://www.aartics.com/projects/aartics_story">Web Dev: 3D aartics.com</a>
+              <a href="https://www.aartics.com/projects/sfac">UX project: SF Arts Commission</a>
+              <a href="https://www.aartics.com/projects/wolflion">UX project: Wolf and Lion</a>
+              <a href="https://www.aartics.com/projects/karunavr">UX project: Karuna VR</a>
+            </div>
+        </li>
+        <li class="a_top_hypers dropdown" id="area3dd">
+            <button class="dropbtn" id="area3">Architect</button>
+            <div class="dropdown-content">
+              <a href="https://www.aartics.com/projects/aartics_architecture.pdf">Architecture Portfolio PDF</a>
+              <a href="https://www.aartics.com/projects/aartics_urbanism.pdf">Urbanism Portfolio PDF</a>
+              <a href="https://www.aartics.com/projects/coimbatore">Architecture: Mall in Coimbatore</a>
+              <a href="https://www.aartics.com/projects/assen">Urban Design: City Boulevard, Assen</a>
+              <a href="https://www.aartics.com/projects/mumbai">Urban Design: Recentering Mumbai</a>
+              <a href="https://www.aartics.com/projects/barcelona">Urban Planning: Barcelona Idea</a>
+            </div>
+        </li>
+        <li class="a_top_hypers dropdown" id="area4dd">
+            <button class="dropbtn" id="area4">Maker</button>
+            <div class="dropdown-content">
+              <a href="https://www.aartics.com/projects/bendy">Product: Shelter-Cart, New York</a>
+              <a href="https://github.com/aartics/chess_models">Product: Chess of Thrones</a>
+              <a href="https://www.aartics.com/projects/octet">Product: Octet Truss Block</a>
+              <a href="https://www.aartics.com/projects/allsportsbar">Interiors: All Sports Bar</a>
+              <a href="https://www.aartics.com/projects/graphics">Graphics: Miscellaneous</a>
+            </div>
+        </li>
+        <li class="a_top_hypers dropdown" id="area5dd">
+            <button class="dropbtn" id="area5">Engineer</button>
+            <div class="dropdown-content">
+              <a href="https://github.com/aartics">My GitHub page</a>
+              <a href="https://www.linkedin.com/in/aartics">My LinkedIn Profile</a>
+              <a href="aartics_resume.pdf">My Resume</a>
+            </div>
+        </li>
+      <li class="a_top_hypers dropdown" id="area6dd">
+        <button class="dropbtn" id="area6">About</button>
         <div class="dropdown-content">
-          <a href="https://www.aartics.com/projects/bendy">Product: Shelter-Cart, New York</a>
-          <a href="https://github.com/aartics/chess_models">Product: Chess of Thrones</a>
-          <a href="https://www.aartics.com/projects/octet">Product: Octet Truss Block</a>
-          <a href="https://www.aartics.com/projects/allsportsbar">Interiors: All Sports Bar</a>
-          <a href="https://www.aartics.com/projects/graphics">Graphics: Miscellaneous</a>
-          <a href="https://www.aartics.com">More projects</a>
+          <a href="https://www.aartics.com">I'm Aarti, <br> an engineer <br>and designer <br>seeking new <br>opportunities</a>
         </div>
-    </span>
-  </div>
-</div>
+      </li>
+      </ul>
+    </header>
 
 <div id="landing">
 </div>
@@ -78,20 +118,61 @@
   <a href="../aartics_architecture.pdf" target="_blank">Click here to see complete Architectural design portfolio</a>
   </div>
 </div>
-  <footer>
-    <div class="parentfooter">
-        <div class="signature">
-          <p>designed and developed by <a href="https://aartics.com">&copy; aartics.com </a></p>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-6 col-sm-6 col-md-2 footer-tile unoux">
+        <h3>more ux design:</h3>
+        <ul>
+          <li><a href="https://www.aartics.com/projects/resonateai">Resonate.ai</a></li>
+          <li><a href="https://www.aartics.com/projects/aartics_story">3D aartics.com</li>
+          <li><a href="https://www.aartics.com/projects/sfac">SF Arts Commission</a></li>
+          <li><a href="https://www.aartics.com/projects/wolflion">Wolf and Lion</a></li>
+          <li><a href="https://www.aartics.com/projects/karunavr">Karuna VR</a></li>
+        </ul>
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-2 footer-tile dosarch">
+        <h3>architecture:</h3>
+        <ul>
+          <li><a href="https://www.aartics.com/projects/aartics_architecture.pdf">Architecture Portfolio PDF</a></li>
+          <li><a href="https://www.aartics.com/projects/coimbatore">Mall in Coimbatore</a></li>
+          <li><a href="https://www.aartics.com/projects/assen">City Boulevard, Assen</a></li>
+          <li><a href="https://www.aartics.com/projects/mumbai">Recentering Mumbai</a></li>
+          <li><a href="https://www.aartics.com/projects/barcelona">Barcelona Idea</a></li>
+        </ul>       
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-2 footer-tile tresmaker">
+        <h3>maker projects:</h3>
+        <ul>
+          <li><a href="https://www.aartics.com/projects/bendy">Shelter-Cart, New York</a></li>
+          <li><a href="https://github.com/aartics/chess_models">Chess of Thrones</a></li>
+          <li><a href="https://www.aartics.com/projects/octet">Octet Truss Block</a></li>
+          <li><a href="https://www.aartics.com/projects/allsportsbar">All Sports Bar</a></li>
+          <li><a href="https://www.aartics.com/projects/graphics">Miscellaneous Graphics</a></li>
+        </ul>
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-2 footer-tile quatroeng">
+        <h3>engineering profile:</h3>
+        <ul>
+          <li><a href="https://www.aartics.com">My Website: aartics.com</a></li>
+          <li><a href="https://github.com/aartics">My GitHub</a></li>
+          <li><a href="https://www.linkedin.com/in/aartics">My LinkedIn Profile</a></li>
+          <li><a href="aartics_resume.pdf">My Resume</a></li>
+        </ul>
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-4 footer-tile cincoabout">
+        <h3 id="abouth3">about me:</h3>
+        <p>I'm Aarti. I'm a designer + developer and I'm bringing together my past experience in architecture and software engineering to build new futures. Get in touch:</p>
+        <div class="row logocwrapper">
+          <a href="https://www.aartics.com" class="logoc"><img src="../../aartics_icon_v4_white.png"></a>
+          <a href="aartics_resume.pdf" class="logoc"><img src="../../img/resume_white.png"/></a>
+          <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="../../img/linkedin_white.png"/></a>
+          <a href="mailto:aartics@gmail.com" class="logoc"><img src="../../img/mail_white.png"/></a>
+          <a href="https://github.com/aartics" class="logoc"><img src="../../img/github_white.png"/></a>
         </div>
-        <div class="logowrapper">
-          <a href="https://www.aartics.com" class="logoc"><img src="../aartics_icon.png"></a>
-          <a href="aartics_resume.pdf" class="logoc"><img src="../../img/resume.png"/></a>
-          <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="../../img/linkedin.png"/></a>
-          <a href="mailto:aartics@gmail.com" class="logoc"><img src="../../img/mail.png"/></a>
-          <a href="https://github.com/aartics" class="logoc"><img src="../../img/github.png"/></a>
-        </div>
+        <p class="signature" id="signed">designed and developed by<a href="https://www.aartics.com"> &copy; aartics &nbsp;</a></p>
+      </div>
     </div>
-  </footer>
+  </div>
 
   <script>
     if(window.innerHeight < window.innerWidth){
