improving descriptions and tags to aid analytics

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>aartics</title>
+  <meta name=”description” content=”I am Aarti C Sharma. I am a front-end developer and a user-experience designer. This is my 3D portfolio website.“>
+	<title>aartics.com - portfolio</title>
 	<link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
