all sports bar in v4

--- a/aartics/projects/allsportsbar/index.htm
+++ b/aartics/projects/allsportsbar/index.htm
@@ -17,18 +17,6 @@
     <link rel="icon" 
       type="image/png" 
       href="../../favico.png">
-  <!--  <script src="../assets_v4/js/aartics_projects_js.js"></script> -->
-  <!-- <link rel="stylesheet" href="../aartics_projects.css"> -->
-  <style>
-      #landing {
-          height: 1350px;
-          background: url(local_img/001.png);
-          background-repeat: no-repeat;
-          background-position: center 200px;
-          background-color: #22313f;
-          background-size: 195%;
-      }
-  </style>
 </head>
 
 <body>
@@ -85,39 +73,162 @@
       </ul>
     </header>
 
-<div id="landing">
-</div>
+	<div class="container-fluid">
+	  <div class="row">
+		<div class="col-sm-4" id="intro-text">
+		<img src="local_img/aartics_icon_v4.png" id="intro-logo"/>
+		<h1>all sports bar, mumbai</h1>
+		<p>As a project architect for 'All Sports Bar', I converted an empty warehouse into a cool new bar in 25 days, and the project is featured in a Bollywood movie!</p>
+			<div class="row">
+				<div class="col-sm-6 col-md-6 col-lg-6 intro-icon">
+					<img src="../assets_v4/img/sandtimer_solid.png"/>
+					<h6>Team size: 1</h6>
+				</div>
+				<div class="col-sm-6 col-md-6 col-lg-6 intro-icon">
+					<img src="../assets_v4/img/sandtime.png"/>
+					<h6>Duration: 1 month</h6>
+				</div>					
+			</div>
+			<div class="row">
+				<img src="local_img/downarrow.svg" id="downarrow"/>
+			</div>
+		</div>
+		<div class="col-sm-8" id="heroimage">
+			<img src="local_img/002_allsports_02_view.png" id="heroimageimg"/>
+		</div>
+	  </div>
+	</div>
 
-<div id="project-content">
-  <div class="image-title">
-  Project Context
-  <h2>Role: Architect, Arris Architects, Mumbai</h2>
-  </div>
-  <img src="local_img/allsports_intro.png">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="problem">
+				<a href="#problem-1">		
+					<p class="boxtitle" id="problemtitle">problem</p>
+					<img id="problemsrc" src="../assets_v4/img/icon_problem.png"/>
+					<p class="introdesc" id="problemdesc">For my design portfolio, aartics.com I undertook making a 3D representation my project gallery, viewed as if in a VR/AR world.</p>
+				</a>
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="solution">
+				<a href="#solution-1">
+					<p class="boxtitle" id="solutiontitle">solution</p>
+					<img id="solutionsrc" src="../assets_v4/img/icon_solution.png"/>
+					<p class="introdesc" id="solutiondesc">Imagining new media futures.</p>
+				</a>
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="process">
+				<a href="#process-1">
+					<p class="boxtitle" id="processtitle">process</p>
+					<img id="processsrc" src="../assets_v4/img/icon_process.png"/>
+					<p class="introdesc" id="processdesc"> Research  &nbsp;&nbsp;|&nbsp;&nbsp;  Wireframe &nbsp;&nbsp;|&nbsp;&nbsp; Product Design &nbsp;&nbsp;|&nbsp;&nbsp; Prototype &nbsp;&nbsp;|&nbsp;&nbsp; Feature and User Flow Map &nbsp;&nbsp;|&nbsp;&nbsp; Interaction Design &nbsp;&nbsp;|&nbsp;&nbsp; Visual Design &nbsp;&nbsp;|&nbsp;&nbsp; Product Roadmap</p>
+				</a>
+			</div>
+		</div>
+	</div>
 
-  <div class="image-title">
-  3D views of design to be executed
-  </div>
-  <img src="local_img/002_allsports_02_view.png">
-  <div class="image-title">
-  3D plan view of furniture layout
-  </div>
-  <img src="local_img/allsports_03_plan.png">
-  <div class="image-title">
-  Completed project site maps exactly to design concept
-  <p><br>The design and execution of this project was completed in 25 days, right before the launch of the internation cricket tournament</p>
-  </div> 
-  <img src="local_img/003_allsports_01_pic.png">
-  <img src="local_img/allsports_04_pic.png">
-  <div class="image-title">
-  Architect with Arris Architects, Mumbai
-  <p><br>This project was designed and completed when I was an architect with Arris Architects, Mumbai.</p>
-  </div>
-  <img src="local_img/all_sports_end_arris.png">
-  <div class="image-title">
-  <a href="../aartics_architecture.pdf" target="_blank">Click here to see complete Architectural design portfolio</a>
-  </div>
-</div>
+	<div class="container-fluid itemblock" id="problem-1">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_problem_color.png"/>
+			<p class="itemblock-sectiontitle-problem">problem synthesis</p>
+			<h1 class="itemblock-itemtitle">project context</h1>
+			<p class="itemblock-paragraph">Role: Architect, Arris Architects, Mumbai</p>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Project description:</p>
+				<img class="itemblock-image-img" src="local_img/001.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock" id="solution-1">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_solution_color.png"/>
+			<p class="itemblock-sectiontitle-solution">solution</p>
+			<h1 class="itemblock-itemtitle">completed project site</h1>
+			<p class="itemblock-paragraph">The design and execution of this project was completed in 25 days, 
+			right before the launch of the internation cricket tournament</p>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
+				<div class="row itemblock-image-title-div">
+					<p class="itemblock-image-title">Design render + Completed site photograph</p>
+                    <img class="itemblock-image-img" src="local_img/sitepic.png"/>
+				</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock" id="process-1">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
+			<p class="itemblock-sectiontitle-process">process</p>
+			<h1 class="itemblock-itemtitle">spatial design</h1>
+			<p class="itemblock-paragraph">Planning the space for maximum viewing of screen
+			and multiple furniture layout configurations</p>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Plan view of All Sports Bar:</p>
+				<img class="itemblock-image-img" src="local_img/planview.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
+			<p class="itemblock-sectiontitle-process">process</p>
+			<h1 class="itemblock-itemtitle">spatial design</h1>
+			<p class="itemblock-paragraph">3D views of design to be executed</p>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Isometric view:</p>
+				<img class="itemblock-image-img" src="local_img/isometric.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>	
+	<div class="container-fluid itemblock">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
+			<p class="itemblock-sectiontitle-process">process</p>
+			<h1 class="itemblock-itemtitle">project context</h1>
+			<p class="itemblock-paragraph">Role: Architect, Arris Architects, Mumbai</p>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Project context:</p>
+				<img class="itemblock-image-img" src="local_img/projectcontext.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
+			<p class="itemblock-sectiontitle-process">process</p>
+			<h1 class="itemblock-itemtitle">experience</h1>
+			<p class="itemblock-paragraph">This project was designed and completed when I was an architect with Arris Architects, Mumbai.</p>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Experience with Arris Architects:</p>
+				<img class="itemblock-image-img" src="local_img/arris.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-6 col-sm-6 col-md-2 footer-tile unoux">
